--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-/PCB/headlamp-backups
-/PCB/grb
-/software/old
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
 *.kicad_prl
-PCB/headlamp.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+
+# Netlist files (exported from Eeschema)
+*.net
+
+
+/software/old
+#*.kicad_prl
+#PCB/headlamp.kicad_prl
